[workspace]
members = ["basteh", "basteh-memory", "basteh-sled", "basteh-redis", "examples/*"]

[patch.crates-io]
basteh = { path = "./basteh/" }
basteh-memory = { path = "./basteh-memory/" }
basteh-sled = { path = "./basteh-sled/" }
basteh-redis = { path = "./basteh-redis/" }

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
