[package]
name = "actix-storage-dashmap"
version = "0.1.1"
authors = ["Pouya M. B. <pooyamb@gmail.com>"]
description = "An implementation of actix-storage based on dashmap"
edition = "2018"
readme = "README.md"
repository = "https://github.com/pooyamb/actix-storage/"
homepage = "https://github.com/pooyamb/actix-storage/"
license = "MIT OR Apache-2.0"
keywords = ["actix", "storage", "web", "async", "dashmap"]
categories = ["asynchronous", "caching", "web-programming::http-server"]

[package.metadata.docs.rs]
features = ["actor"]

[dependencies]
actix = { version = "0.10", default-features = false }
async-trait = "0.1"
thiserror = "1"
dashmap = "3"
delay-queue = { version = "0.2", optional = true }
actix-storage = { version = "0.1", features = ["with-serde"] }

[dev-dependencies]
actix-web = "3"
actix-rt = "1.1"
rand = "0.7"
serde = "1.0"
actix-storage = { version = "0.1", features = ["all", "tests"] }

[features]
actor = ["delay-queue"]
