[package]
name = "actix-storage-hashmap"
version = "0.3.0"

authors = ["Pouya M. B. <pooyamb@gmail.com>"]
categories = ["asynchronous", "caching", "web-programming::http-server"]
description = "An implementation of actix-storage based on hashmap"
documentation = "https://docs.rs/actix-storage-hashmap"
edition = "2018"
keywords = ["actix", "storage", "web", "async", "hashmap"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/pooyamb/actix-storage/"

[package.metadata.docs.rs]
features = ["actor"]

[dependencies]
actix = {version = "0.13", default-features = false}
actix-storage = {version = "0.3.0"}
async-trait = "0.1"
futures = {version = "0.3", optional = true}
log = "0.4"
thiserror = "1"
tokio = {version = "1.13.1", features = [
  "time",
  "sync",
  "macros",
], optional = true}
tokio-stream = {version = "0.1", optional = true}
tokio-util = {version = "0.7", features = [
  "time",
], optional = true}

[dev-dependencies]
actix-storage = {version = "0.3.0", features = ["all", "tests"]}
actix-web = "4.0.0"
rand = "0.8"
serde = "1"

[features]
actor = ["tokio", "tokio-util", "tokio-stream", "futures"]
