[package]
name = "actix-storage-hashmap"
version = "0.3.0"

authors = ["Pouya M. B. <pooyamb@gmail.com>"]
categories = ["asynchronous", "caching", "web-programming::http-server"]
description = "An implementation of actix-storage based on hashmap"
documentation = "https://docs.rs/actix-storage-hashmap"
edition = "2018"
keywords = ["storage", "web", "async", "hashmap"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/pooyamb/actix-storage/"

[dependencies]
actix-storage = { version = "0.3.0" }
async-trait = "0.1"
thiserror = "1"

futures = { version = "0.3" }
tokio = { version = "1.13.1", features = ["time", "sync", "macros"] }
tokio-util = { version = "0.7", features = ["time"] }
parking_lot = "0.12.1"

[dev-dependencies]
tokio = { version = "1.13.1", features = ["time", "sync", "macros", "rt"] }
actix-storage = { version = "0.3.0", features = ["all", "test_utils"] }
rand = "0.8"
