[package]
name = "actix-storage-redis"
version = "0.2.0"
authors = ["Pouya M. B. <pooyamb@gmail.com>"]
description = "An implementation of actix-storage based on redis-rs"
edition = "2018"
readme = "README.md"
repository = "https://github.com/pooyamb/actix-storage/"
documentation = "https://docs.rs/actix-storage-redis"
license = "MIT OR Apache-2.0"
keywords = ["actix", "storage", "web", "async", "redis"]
categories = ["asynchronous", "caching", "web-programming::http-server"]

[dependencies]
actix = { version = "0.10", default-features = false }
async-trait = "0.1"
thiserror = "1"
actix-storage = { version = "0.2.0", features = ["with-serde"] }
redis = { version = "0.17", default-features = false, features = [
    "connection-manager"
] }

[dev-dependencies]
actix-web = "3"
rand = "0.8"
serde = "1"
actix-storage = { version = "0.2.0", features = ["all", "tests"] }

[features]
tls = ["redis/tokio-tls-comp"]
# Uses no key prefix for actix-storage's global scope, at the cost of 1 string comparation on every operation
v01-compat = []