[package]
name = "actix-storage-sled"
version = "0.3.0"

authors = ["Pouya M. B. <pooyamb@gmail.com>"]
categories = ["asynchronous", "caching", "web-programming::http-server"]
description = "An implementation of actix-storage based on sled"
documentation = "https://docs.rs/actix-storage-sled"
edition = "2018"
keywords = ["actix", "storage", "web", "async", "sled"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/pooyamb/actix-storage/"

[package.metadata.docs.rs]
features = ["actor"]

[dependencies]
actix = {version = "0.13", default-features = false}
actix-storage = {version = "0.3.0", features = ["with-serde"]}
async-trait = "0.1"
byteorder = {version = "1.3", optional = true}
delay-queue = {version = "0.2", optional = true}
log = "0.4"
sled = {version = "0.34", git = "https://github.com/spacejam/sled.git"}
thiserror = "1"
zerocopy = {version = "0.6", optional = true}

[dev-dependencies]
actix-storage = {version = "0.3.0", features = ["all", "tests"]}
actix-web = "4.0.0"
rand = "0.8"
serde = "1"

[features]
actor = ["delay-queue", "zerocopy", "byteorder"]
compression = ["sled/compression"]
# Uses the default tree for actix-storage's global scope, at the cost of 1 string comparation on every operation
v01-compat = []
