[package]
name = "actix-storage-sled"
version = "0.3.0"
authors = ["Pouya M. B. <pooyamb@gmail.com>"]
categories = ["asynchronous", "caching", "web-programming::http-server"]
description = "An implementation of actix-storage based on sled"
documentation = "https://docs.rs/actix-storage-sled"
edition = "2018"
keywords = ["storage", "web", "async", "sled"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/pooyamb/actix-storage/"

[dependencies]
actix-storage = "0.3.0"
async-trait = "0.1"
log = "0.4"
thiserror = "1"

tokio = { version = "1.13.1", features = ["time", "sync", "macros"] }
delay-queue = { version = "0.2" }
crossbeam-channel = "0.5"
parking_lot = "0.12"

byteorder = { version = "1.3" }
zerocopy = { version = "0.6" }

# The sled version available on crates.io uses an old version of zstd-sys which conflicts with actix-web
# TODO: fix this before releasing
sled = { version = "0.34", git = "https://github.com/spacejam/sled.git" }

[dev-dependencies]
actix-storage = { version = "0.3.0", features = ["all", "test_utils"] }
actix-web = "4.0.0"
rand = "0.8"
