[package]
name = "actix-storage"
version = "0.3.0"

authors = ["Pouya M. B. <pooyamb@gmail.com>"]
categories = ["asynchronous", "caching", "web-programming::http-server"]
description = "General key value storage for actix-web"
documentation = "https://docs.rs/actix-storage"
edition = "2018"
keywords = ["actix", "storage", "web", "async"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/pooyamb/actix-storage/"

[dependencies]
actix = {version = "0.13.0"}
actix-web = {version = "4.0.0", default-features = false}

async-trait = "0.1"
log = "0.4"
thiserror = "1"

bincode = {version = "1.3", optional = true}
quick-xml = {version = "0.26.0", features = ["serialize"], optional = true}
ron = {version = "0.8.0", optional = true}
serde = {version = "1.0", optional = true}
serde_cbor = {version = "0.11", optional = true}
serde_json = {version = "1.0", optional = true}
serde_yaml = {version = "0.8", optional = true}

# For tests
futures = {version = "0.3", optional = true}

[features]
all = [
  "serde-json",
  "serde-cbor",
  "serde-yaml",
  "serde-bincode",
  "serde-ron",
  "serde-xml",
]
serde-bincode = ["with-serde", "bincode"]
serde-cbor = ["with-serde", "serde_cbor"]
serde-json = ["with-serde", "serde_json"]
serde-ron = ["with-serde", "ron"]
serde-xml = ["with-serde", "quick-xml"]
serde-yaml = ["with-serde", "serde_yaml"]
tests = ["futures"]
with-serde = ["serde"]

[package.metadata.docs.rs]
features = ["all"]
