[package]
name = "actix-storage"
version = "0.3.0"

authors = ["Pouya M. B. <pooyamb@gmail.com>"]
categories = ["asynchronous", "caching", "web-programming::http-server"]
description = "General key value storage for actix-web"
documentation = "https://docs.rs/actix-storage"
edition = "2018"
keywords = ["actix", "storage", "web", "async"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/pooyamb/actix-storage/"

[dependencies]
actix = { version = "0.13.0" }
actix-web = { version = "4.0.0", default-features = false }

async-trait = "0.1"
log = "0.4"
thiserror = "1"

# For tests
futures = { version = "0.3", optional = true }

[features]
all = []
tests = ["futures"]

[package.metadata.docs.rs]
features = ["all"]
