[package]
name = "basteh-memory"
version = "0.4.0-alpha.4"

authors = ["Pouya M. B. <pooyamb@gmail.com>"]
categories = ["asynchronous", "caching", "web-programming::http-server"]
description = "An implementation of basteh based on hashmap(in memory)"
documentation = "https://docs.rs/basteh-memory"
edition = "2018"
keywords = ["storage", "web", "async", "hashmap"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/pooyamb/basteh/"

[dependencies]
basteh = "=0.4.0-alpha.4"
async-trait = "0.1"
thiserror = "1"

futures-util = { version = "0.3", default-features = false }
tokio = { version = "1.13.1", features = ["time", "macros", "rt"] }
tokio-util = { version = "0.7", features = ["time"] }
parking_lot = "0.12.1"

[dev-dependencies]
tokio = { version = "1.13.1", features = ["time", "macros", "rt"] }
basteh = { version = "=0.4.0-alpha.4", features = ["all", "test_utils"] }
rand = "0.8"
