[package]
name = "basteh"
version = "0.4.0-alpha.2"

authors = ["Pouya M. B. <pooyamb@gmail.com>"]
categories = ["asynchronous", "caching", "web-programming::http-server"]
description = "Generic kv storage with replaceable backend"
documentation = "https://docs.rs/basteh"
edition = "2018"
keywords = ["storage", "web", "async"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/pooyamb/basteh/"

[dependencies]
async-trait = "0.1"
log = "0.4"
thiserror = "1"

# For tests
futures = { version = "0.3", optional = true }
tokio = { version = "1.20", default-features = false, features = ["macros"], optional = true }

[dev-dependencies]
tokio = { version = "1.20", default-features = false, features = ["macros"] }

[features]
default = []
all = []
test_utils = ["tokio", "futures"]

[package.metadata.docs.rs]
features = ["all"]
