[package]
authors = ["Pouya M. B. <pooyamb@gmail.com>"]
edition = "2018"
name = "cached"
version = "0.1.0"

[dependencies]
actix-storage = {version = "0.2.0", features = ["serde-json"]}
actix-storage-dashmap = {version = "0.2.0", features = ["actor"]}
actix-storage-hashmap = {version = "0.2.0", features = ["actor"]}
actix-storage-redis = {version = "0.2.0"}
actix-storage-sled = {version = "0.2.0", features = ["actor"]}
actix-web = "3"
rand = "0.8"
serde = "1.0.117"

[[example]]
name = "cached"
path = "./src/app.rs"
