[package]
authors = ["Pouya M. B. <pooyamb@gmail.com>"]
edition = "2018"
name = "cached"
version = "0.1.0"

[dependencies]
basteh = "0.4.0-alpha.3"
basteh-memory = "0.4.0-alpha.3"
actix-web = "4.0.0"

rand = "0.8"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1"

[[example]]
name = "cached"
path = "./src/app.rs"
