[package]
authors = ["Pouya M. B. <pooyamb@gmail.com>"]
edition = "2018"
name = "fibonacci"
version = "0.1.0"

[dependencies]
actix-storage = {version = "0.2.0-alpha", features = ["serde-json"]}
actix-storage-dashmap = {version = "0.2.0-alpha"}
actix-storage-hashmap = {version = "0.2.0-alpha"}
actix-storage-redis = {version = "0.2.0-alpha"}
actix-storage-sled = {version = "0.2.0-alpha"}
actix-web = "3"

[[example]]
name = "fibonacci"
path = "./src/app.rs"
