[package]
authors = ["Pouya M. B. <pooyamb@gmail.com>"]
edition = "2018"
name = "fibonacci"
version = "0.1.0"

[dependencies]
actix-storage = {version = "0.3.0", features = ["serde-json"]}
actix-storage-dashmap = {version = "0.3.0"}
actix-storage-hashmap = {version = "0.3.0"}
actix-storage-redis = {version = "0.3.0"}
actix-storage-sled = {version = "0.3.0"}
actix-web = "4.0.0"

[[example]]
name = "fibonacci"
path = "./src/app.rs"
