[package]
name = "hashmap-actor"
version = "0.1.0"
authors = ["Pouya M. B. <pooyamb@gmail.com>"]
edition = "2018"

[dependencies]
actix-storage = { version = "0.1", features = ["serde-cbor"] }
actix-storage-hashmap = { version = "0.1", features = ["actor"] }
actix-web = "3"
serde = "1.0.117"

[[example]]
name = "hashmap-actor"
path = "./src/app.rs"
