[package]
authors = ["Pouya M. B. <pooyamb@gmail.com>"]
edition = "2018"
name = "simple"
version = "0.1.0"

[dependencies]
actix-storage = "0.3.0"
actix-storage-hashmap = { version = "0.3.0", features = ["actor"] }
actix-web = "4.0.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1"

[[example]]
name = "simple"
path = "./src/app.rs"
