[package]
authors = ["Pouya M. B. <pooyamb@gmail.com>"]
edition = "2018"
name = "simple"
version = "0.1.0"

[dependencies]
basteh = "0.3.0"
basteh-memory = "0.3.0"
actix-web = "4.0.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1"

[[example]]
name = "simple"
path = "./src/app.rs"
