[package]
authors = ["Pouya M. B. <pooyamb@gmail.com>"]
edition = "2018"
name = "simple"
version = "0.1.0"

[dependencies]
basteh = "0.4.0-alpha.2"
basteh-memory = "0.4.0-alpha.2"
actix-web = "4.0.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1"

[[example]]
name = "simple"
path = "./src/app.rs"
