[package]
name = "sled-store"
version = "0.1.0"
authors = ["Pouya M. B. <pooyamb@gmail.com>"]
edition = "2018"

[dependencies]
actix-storage = { version = "0.2.0-alpha", features = ["serde-bincode"] }
actix-storage-sled = "0.2.0-alpha"
actix-web = "3"
serde = "1.0.117"

[[example]]
name = "sled-store"
path = "./src/app.rs"
